--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://mexil77.github.io/PokedexAplication/",
+  "homepage": "http://Mexil77.github.io/PokedexAplication/",
   "name": "pokemonapp",
   "version": "0.1.0",
   "private": true,
